댓글을 중복으로 달기 않게 하기 위한 조건 추가