@@ -1,8 +1,9 @@
 package com.naver.hackday.devcenterbot.model;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.Date;
 import java.util.List;
+import java.util.Map;
 import org.eclipse.egit.github.core.Issue;
 import org.eclipse.egit.github.core.service.IssueService;
 import org.springframework.beans.factory.annotation.Value;
@@ -11,6 +12,7 @@ import org.springframework.stereotype.Component;
 @Component
 public class TitleScrapper {
 
+	private static final int BOT_SCHEDULE_PERIOD = 20000;
 	private IssueQueue queue;
 	private IssueService issueService;
 
@@ -26,12 +28,19 @@ public class TitleScrapper {
 	}
 
 	public IssueQueue run() throws IOException {
+		long createdAt;
+		long now;
 
 		List<Issue> listIssue =
-			issueService.getIssues(this.user, this.repo, Collections.singletonMap("state", "open"));
+			issueService.getIssues(this.user, this.repo, Map.of("state", "open"));
 
 		for (Issue item : listIssue) {
-			queue.offer(item);
+			createdAt = item.getCreatedAt().getTime();
+			now = new Date().getTime();
+
+			if(now - createdAt < BOT_SCHEDULE_PERIOD) {
+				queue.offer(item);
+			}
 		}
 
 		return queue;
